plang/testing/logs/false-incorrect/198/program198.p.p
srwBi (EQ2) (DEV) (S7) B.

b7Yf0 la (d7rg yMRt (wPLd XHrFg)) DF5W (y9 pe (boAuL (ibCg xb (T1wG) htw uNL1))) :- ((s aw i U16jb (q), s (x1BLk TBrDn (u0Bz) pCFs3 YV) (qoZo (pS (wS1 (DU6o1))) (ig (oYE (L))) (YQEn)); v (F) (wQJ) S, nMnDQ d7w (RuFzs), aM7 JZT)).


v (iZce (gYFqY (OHQ) A nRR) q (WtMER) qFs) TJzax :- (c0y9P quZ hY zOVaQ; (c (qOpR7 OqucX (ry (lFU (R) eV (Bc66) (B70O)) (Ojge9)) m7PTD Dks), uQk9H (t9id), (qvr1k whT ag zA (PnLv)))).
x.

gCI.
cYjq.

tep (CT) :- ((czzy5; s, fU, ((i9M9G H (vRs9t RZIs))))).
z0ND sA ozY rO.
yqaf (Qg3x) yU (p h) (NFtoW).
n UC :- x ic slLZf (xcBf) (Or), pYd (Vk4Z), m; wygKW (iuMto) Ca (PLs96) rx, bp4yP ck (P2), tOc (gz) uvh4 (HdTzj); lmd nBj0, h3tE (Mv7cH) (wL); ((iW (a4Rl) (K) cZRgQ)); er1YE, e j; (d (QOUr) SVWhI (YZf)); (tKKyB; gg R (YAMP) x; oImge uGhM (TPI) WN TdhsE; ql (sUi)).


? s (o8PGV mCMa (f (G0))) L8nj.



